syntax = "proto3";

package todo;

option go_package = "github.com/uit/proto_go/uit/todo";

// TodoStatus 状态
enum TodoStatus {
    TodoStatusNone = 0;
    TodoStatusStarted = 1;
    TodoStatusFinished = 2;
}

// TodoItem 条目
message TodoItem {
    string id = 1;
    string title = 2;
    string desc = 3;
    repeated string tags = 4;
}

message AddReq {}

message AddRsp {}

message ListReq {}

message ListRsp {
    repeated TodoItem items = 1;
}

message RemoveReq {}

message RemoveRsp {}

message ModifyReq {}

message ModifyRsp{}

service UitTodo {
    rpc Add(AddReq) returns (AddRsp);
    rpc Remove(RemoveReq) returns (RemoveRsp);
    rpc List(ListReq) returns (ListRsp);
    rpc Modify(ModifyReq) returns (ModifyRsp);
}